<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">WioKey</string>
    <string name="title_home">Home</string>
    <string name="title_credential">Credentials</string>
    <string name="title_about">About</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="newdevice">Add new device</string>
    <string name="nodefaultdevicename">No default host</string>
    <string name="nodefaultdeviceaddr">00:00:00:00:00:00</string>
    <string name="nobluetooth">Device does not have bluetooth</string>
    <string name="bluetoothoff">Bluetooth is off. Press here to turn on</string>
    <string name="bluetoothoff_dialog_title">Bluetooth is OFF!</string>
    <string name="bluetoothoff_dialog_message">WioKey requires an active Bluetooth connection to provide extra security for accounts on remote devices. Would you like to enable Bluetooth?</string>
    <string name="nosecurity">Your device is not secured. Please add biometrics/PIN/Pattern to your device screen unlock.</string>
    <string name="nodefaulthostmessage">Tap the key to add a new device</string>
    <string name="connectedhostmessage">Connected to %1$s</string>
    <string name="disconnectedhostmessage">%1$s disconnected\nTap the key to select another device or try to reconnect</string>
    <string name="connectinghostmessage">Connecting to %1$s</string>
    <string name="pairingnewdevice">Bluetooth is now discoverable!\nWaiting to pair with a new device…</string>
    <string name="biometrics_promptTitle">Biometric login</string>
    <string name="biometrics_promptSubtitle">WioKey requires your biometrics for added security</string>
    <string name="biometrics_noBiometricsTitle">No Device Security Set</string>
    <string name="biometrics_noBiometricsSubtitle">Please set biometrics/pin/pattern/password on your device to use this app.\nOpen security settings?</string>
    <string name="biometrics_lockScreenExplanation">WioKey requires your authentication to access your credentials. Tap to authenticate</string>
    <string name="biometrics_credentialsExplanation">WioKey requires a secure screen lock to protect your credentials. Tap to create one</string>
    <string name="tutorial_1_title">Welcome!</string>
    <string name="tutorial_1_content">Thank you for choosing WioKey! We will provide you here with some general information on what WioKey is and how it works.\n\nPlease visit our website <a href="https://www.wiokey.de">wiokey.de</a> or the <b>About FAQ</b> page for detailed information on how to get started.</string>
    <string name="tutorial_1_summary"> </string>
    <string name="tutorial_2_title">Your are in control!</string>
    <string name="tutorial_2_content">We use your phone\'s native lock screen capabilities (PIN, pattern, biometric profile) to safeguard your login information. Because of this, we require at least one verification method to be active!\n\nRest assured, your biometric info never leaves your phone! Check the <b>About</b> section to find out more!</string>
    <string name="tutorial_2_summary"> </string>
    <string name="tutorial_3_title">Your phone as Security Key</string>
    <string name="tutorial_3_content">Your phone is recognized securely by your PC via Bluetooth without requiring an extra internet connection during the authentication.\n\nYour PC will send any authentication request over Bluetooth to your phone which will securely sign the request with your credentials stored in your phone\'s trusted environment.</string>
    <string name="tutorial_3_summary"> </string>
    <string name="tutorial_4_title">Get started!</string>
    <string name="tutorial_4_content">Follow the quickstart guides on <a href="https://www.wiokey.de/tutorial">wiokey.de/tutorial</a> and stay tuned for upcoming features like seamless logins (regardless of server side FIDO2 support), credentials secure back-ups, and much more.</string>
    <string name="tutorial_4_summary">Made with ❤ in Bremen, Germany</string>
    <string name="home_bluetoothdisabled">Bluetooth is not enabled</string>
    <string name="account_domainname">Domain Name</string>
    <string name="account_domainid">Domain ID:</string>
    <string name="account_user">User:</string>
    <string name="account_userid">User ID:</string>
    <string name="account_createdon">Created on:</string>
    <string name="clientPin_change_title">Change PIN</string>
    <string name="clientPin_set_title">Set PIN</string>
    <string name="clientPin_explain">The PIN must have at least 4 digits</string>
    <string name="clientPin_oldentry">Old PIN</string>
    <string name="clientPin_newentry">New PIN</string>
    <string name="clientPin_repeatentry">Confirm new PIN</string>
    <string name="clientPin_confirmaction">Apply</string>
    <string name="credMan_removeSuccess">Removed credential %1$s for user %2$s</string>
    <string name="credMan_resetSuccess">Authenticator reset finished</string>
    <string name="credMan_operationCanceled">Remove operation canceled</string>
    <string name="credMan_pinResetSuccess">Reset PIN successful</string>
    <string name="credMan_pinResetCanceled">Reset PIN canceled</string>
    <string name="credMan_changeClientPinSuccess">Changed PIN successfully</string>
    <string name="credMan_changeClientPinNoMatch">PIN confirmation does not match new PIN!</string>
    <string name="credMan_changeClientPinTooShort">PIN invalid! PIN is shorter than 4 digits.</string>
    <string name="credMan_changeClientPinResetCanceled">Resetting PIN state failed due to invalid user verification or timeout!</string>
    <string name="credMan_changeClientPinCanceled">PIN change failed</string>
    <string name="credMan_u2fCredential">U2F Credential</string>
    <string name="credMan_hardwareBacked">Your android device supports storing your keys inside of a Hardware Security Module, or a Trusted Execution Environment! Meaning that Google believes that your credentials cannot be remotely extracted 🎉🥳!</string>
    <string name="about_restartTutorial">Tutorial</string>
    <string name="about_shareApp">Share</string>
    <string name="about_faq">FAQ</string>
    <string name="about_aboutUs">About Us</string>
    <string name="about_aboutUsText">We are a German start-up passionate about wireless connectivity on a mission to seamlessly and securely connect our users to the digital world. Join us on this path and find out more by following the links below!</string>
    <string name="about_license">License</string>
    <string name="about_termsconditions"><u>Terms and Conditions</u></string>
    <string name="about_privacypolicy"><u>Privacy Policy</u></string>
    <string name="about_licenseInfo"><u>License Info</u></string>
    <string name="about_compatiblityText"><u>Compatibility Info</u></string>
    <string name="about_licenseText">Copyright \u00A9 2020 WIOsense GmbH \u0026 Co. KG</string>
    <string name="about_shareTitle">How do you want to share the app?</string>
    <string name="about_shareText" translatable="false">http://play.google.com/store/apps/details?id=%1$s</string>
    <string name="about_shareOptInText" translatable="false">http://www.wiokey.de/#download</string>
    <string name="about_shareOptInTextDescription" translatable="false">Check out this interesting security key app (still in beta testing)\n</string>
    <string name="companyWebsiteURL" translatable="false" >https://www.wiosense.de/</string>
    <string name="companyLinkedInURL" translatable="false">https://www.linkedin.com/company/wiosense/</string>
    <string name="companyMediumURL" translatable="false">https://medium.com/@wiosense</string>
    <string name="companyEmail" translatable="false">contact@wiosense.de</string>
    <string name="about_mailto" translatable="false">mailto:%s</string>
    <string name="appWebsiteURL" translatable="false">https://wiokey.de</string>
    <string name="optout_events">Send anonymous app events</string>
    <string name="optout_crash">Send crash reports</string>
    <string name="optout_notifications">Receive push notifications</string>
    <string name="subscribe_unsubscribe">Unsubscribe</string>
    <string name="subscribe_subscribe">Subscribe!</string>
    <string name="subscribe_no">Not now</string>
    <string name="subscribe_title">Subscribe to our updates</string>
    <string name="subscribe_body">We are a young startup with a grand vision.\n\nSupport us by subscribing!</string>
    <string name="subscribe_email">Email:</string>
    <string name="faq_1_question">Which websites can I use the app with?</string>
    <string name="faq_1_answer">2-Factor Authentication can be used with any of the <a href="https://www.dongleauth.info/">U2F-supporting websites</a>. The complete passwordless experience is today only implemented by Microsoft and a few others. Stay tuned for updates on the FIDO2 deployment as well as our development of a FIDO2-independent solution.</string>
    <string name="faq_2_question">Why do you make use of my biometrics?</string>
    <string name="faq_2_answer">Because of the sensitive nature of the information being handled, we leverage the native biometric security of your phone to ensure that <b>only you</b> are able to look and manage it. Your biometric data never leaves your device, nor do we have any type of access to it.</string>
    <string name="faq_3_question">Can I use the app without biometrics?</string>
    <string name="faq_3_answer">You can always make use of pattern/PIN/passwords to verify against, but at least one type of screen lock verification must be enabled.</string>
    <string name="faq_4_question">How do I add a Bluetooth Device?</string>
    <string name="license_title">License Information</string>
    <string name="license_description">BSD 3-Clause License\n\nCopyright \u00A9 2020 WIOsense GmbH \u0026 Co. KG\nAll rights reserved.\n\n

        Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:\n\n

        * Redistributions of source code must retain the above copyright notice, this
  list of conditions and the following disclaimer.\n\n

        * Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation
  and/or other materials provided with the distribution.\n\n

        * Neither the name of the copyright holder nor the names of its
  contributors may be used to endorse or promote products derived from
  this software without specific prior written permission.\n\n

        THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="license_acknowledgements_title">Acknowledgements</string>
    <string name="license_acknowledgements">WioKey uses OSS components and libraries. To this end, we would like to acknowledge the following components and libraries that WioKey extends upon.</string>
</resources>