<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupLayout"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp"
    android:layout_gravity="center"
    tools:context=".ui.AccountInfoDialog">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/icon_account"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_title"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_body"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_email"
            android:textStyle="bold"
            android:layout_weight="0.3"
            android:gravity="start"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:gravity="start"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.5" >

            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/subscribe_no"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/roundborder_purple"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.5" >

            <TextView
                android:id="@+id/text_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/subscribe_subscribe"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/roundborder_purple"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
