<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupLayout"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp"
    android:layout_gravity="center"
    tools:context=".ui.AccountInfoDialog">

    <ImageView
        android:id="@+id/image_domainPicture"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/icon_account"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_domainname"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:id="@+id/layout_domainId"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_domainid"
            android:layout_weight="0.3"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/text_domainId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_userName"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_user"
            android:layout_weight="0.3"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_userid"
            android:layout_weight="0.3"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/text_userId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_creationDate"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_createdon"
            android:layout_weight="0.3"
            android:gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/text_creationDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>
