<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupLayout"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center"
    tools:context=".ui.fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/textview_registernewdevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/newdevice"/>

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_defaultDevice"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/registered_device_img"
                    android:layout_width="41dp"
                    android:layout_height="34dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/devices_gray" />

                <TextView
                    android:id="@+id/registered_device_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/nodefaultdevicename"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/registered_device_add"
                    app:layout_constraintEnd_toStartOf="@+id/registered_device_connman"
                    app:layout_constraintStart_toEndOf="@+id/registered_device_img"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/registered_device_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nodefaultdeviceaddr"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="@+id/registered_device_name"
                    app:layout_constraintEnd_toStartOf="@+id/registered_device_connman"
                    app:layout_constraintTop_toBottomOf="@id/registered_device_name" />

                <ImageView
                    android:id="@+id/registered_device_connman"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat= "@drawable/ic_disconnected_plugs"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listview_hiddevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
